applications/APP-000019/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: APP-000019
  namespace: nstest

spec:
  replicas: 1

  selector:
    matchLabels:
      app: APP-000019

  template:
    metadata:
      labels:
        app: APP-000019

    spec:
      containers:
      - name: APP-000019
        image: nginx:test

        ports:
        - containerPort: 80
