applications/APP-000019/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: APP-000019
  namespace: nstest

spec:
  selector:
    app: APP-000019

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
