applications/APP-000019/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: APP-000019
  namespace: nstest

spec:
  ingressClassName: nginx

  rules:
  - host: APP-000019.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: APP-000019

            port:
              number: 80
